import React from 'react';
import ReactDOM from 'react-dom';
import renderer from 'react-test-renderer'
import ReactTestUtils from 'react-dom/test-utils';
import Enzyme, { shallow } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16'
import App from '../App';
import Search from '../Search';
import {Button} from '../Button';
import Table from '../Table';
import {Sort, SORTS} from '../Sort';

Enzyme.configure({ adapter: new Adapter() });

describe('App', () => {

  it('renders without crashing', () => {
    const div = document.createElement('div');
    ReactDOM.render(<App />, div);
  });

  test('has a valid snapshot', () => {
    const component = renderer.create(
      <App />
    );
    let tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

});

describe('Search', () => {

  it('renders without crashing', () => {
    const div = document.createElement('div');
    ReactDOM.render(<Search>This a search component</Search>, div);
  });

  test('has a valid snapshot', () => {
    const component = renderer.create(
      <Search>This a search component</Search>
    );
    let tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

});

describe('Button', () => {

  it('renders without crashing', () => {
    const div = document.createElement('div');
    ReactDOM.render(<Button>This is a button</Button>, div);
  });

  test('has a valid snapshot', () => {
    const component = renderer.create(
      <Button>This is a button</Button>
    );
    let tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

});

describe('Table', () => {

  const props = {
    list: [
      { title: '1', author: '1', num_comments: 1, points: 2, objectID: 'y'},
      { title: '2', author: '2', num_comments: 1, points: 2, objectID: 'z'}
    ],
    sortKey: 'TITLE',
    isSortReverse: false,
  }

  it('renders without crashing', () => {
    const div = document.createElement('div');
    ReactDOM.render(<Table { ...props }/>, div);
  });

  test('has a valid snapshot', () => {
    const component = renderer.create(
      <Table { ...props }/>
    );
    let tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('shows two items in list', () => {
    const element = shallow(
        <Table { ...props }/>
    );

    expect(element.find('.table-row').length).toBe(2);
  });

});
