// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      Search
       
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        className="largeColumn"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
      </span>
      <span
        className="midColumn"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
      </span>
      <span
        className="smallColumn"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
      </span>
      <span
        className="smallColumn"
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
      </span>
      <span
        className="smallColumn"
      >
        Archive
      </span>
    </div>
  </div>
  <div
    className="interactions"
  >
    <i
      aria-hidden="true"
      className="fa fa-spinner fa-loading fa-3x fa-spin"
    />
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  onClick={undefined}
  type="button"
>
  This is a button
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  This a search component
   
  <input
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    type="submit"
  >
    This a search component
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      className="largeColumn"
    >
      <button
        className="button-inline button-active"
        onClick={[Function]}
        type="button"
      >
        Title
      </button>
    </span>
    <span
      className="midColumn"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Author
      </button>
    </span>
    <span
      className="smallColumn"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Comments
      </button>
    </span>
    <span
      className="smallColumn"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Points
      </button>
    </span>
    <span
      className="smallColumn"
    >
      Archive
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className="largeColumn"
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      className="midColumn"
    >
      1
    </span>
    <span
      className="smallColumn"
    >
      1
    </span>
    <span
      className="smallColumn"
    >
      2
    </span>
    <span
      className="smallColumn"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className="largeColumn"
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      className="midColumn"
    >
      2
    </span>
    <span
      className="smallColumn"
    >
      1
    </span>
    <span
      className="smallColumn"
    >
      2
    </span>
    <span
      className="smallColumn"
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
